@startuml

left to right direction

class NewsFeed {
- ArrayList<MessagePost> messages
- ArrayList<PhotoPost> photos
+ void addMessagePost(MessagePost)
+ void addPhotoPost(PhotoPost)
+ void show()
}


class NetworkApp {
+ {static} void main(String[])
}

class PhotoPost {
- String username
- String filename
- String caption
- long timestamp
- int likes
- ArrayList<String> comments
+ void like()
+ void unlike()
+ void addComment(String)
+ String getImageFile()
+ String getCaption()
+ long getTimeStamp()
+ void display()
- String timeString(long)
}


class MessagePost {
- String username
- String message
- long timestamp
- int likes
- ArrayList<String> comments
+ void like()
+ void unlike()
+ void addComment(String)
+ String getText()
+ long getTimeStamp()
+ void display()
- String timeString(long)
}

NetworkApp o--  "1" NewsFeed
NewsFeed "1" o-- "0..n" MessagePost
NewsFeed "1" o-- "0..n" PhotoPost

@enduml